# Fractals

./: .clang-format  .gitignore  CMakeLists.txt  Mandelbrot.cpp  Mandelbrot_CUDA.cu  README.md  check_CUDA.cu
include/: Burning_ship.h  Julia.h  Koch.h  Mandelbrot.h  Sierpinski.h  general.h
src/: Burning_ship.cu  Julia.cu  Koch.cu  Mandelbrot.cu  Sierpinski.cu  general.cu  main.cu
